--- a/mernbackend/views/index.hbs
+++ b/mernbackend/views/index.hbs
@@ -30,7 +30,7 @@
     </div>
     
     <div class="nav" id="banner">
-        <img src="Images/banner-2.jpg" alt="">
+        <img src="Images/backgroundJspm.jpg" alt="">
     </div>
 
     <div class="image" id="special">
@@ -75,7 +75,7 @@
         <div class="footer2" id="foot">
             <ul class="contact">
                 <p>CONTACT &nbsp;US</p>
-                <li><a href="mailto:https//:gauravdeshmukh1703@gmail.com">Email : bluenile2022@gmail.com</a></li>
+                <li><a href="mailto:https//:gauravdeshmukh1703@gmail.com">Email : gauravdeshmukh1703@gmail.com</a></li>
                 <li><a href="tel:+91 9604692451">Phone : +91 9604692451</a></li>
                 <li>Address : Imperial &nbsp;College &nbsp;Of &nbsp;Engineering &nbsp;And &nbsp;Research , &nbsp;Wagholi , &nbsp;Pune , &nbsp;Maharashtra , &nbsp;India</li>
             </ul>
@@ -90,7 +90,7 @@
 
         <hr>
         <div class="footer1">
-            <p>&copy;BLUE NILE @2022</p>
+            <p>&copy;CAFETERIA @2023</p>
             <p>All Rights Reserved | Use of Terms | T&C Apply</p>
         </div>
     </div>
