--- a/mernbackend/views/menu.hbs
+++ b/mernbackend/views/menu.hbs
@@ -1045,6 +1045,25 @@
             </ul>
         </div>
     </div>
+
+{{!-- <script>
+   
+    let foodName;
+    let food=document.querySelectorAll(".dish>.dish1>li");
+    {{!-- console.log(food); --}}
+    let btn=document.querySelectorAll("button");
+    {{!-- console.log(btn); --}}
+    for(let i=0;i<btn.length;i++){
+        btn[i].addEventListener("click",function(e){
+            console.log(food[i*2].innerText);
+            {{!-- foodName=food[i*2].innerText; --}}
+        })
+    }
+
+    {{!-- module.exports=foodName --}}
+    
+</script> --}}
+
 </body>
 
 </html>
