--- a/mernbackend/views/notify.hbs
+++ b/mernbackend/views/notify.hbs
@@ -69,6 +69,14 @@
         background-color: rgb(0, 255, 8);
     }
 
+    a{
+        text-decoration: none;
+    }
+    
+    a:hover{
+        color: black;
+    }
+
     </style>
 </head>
 <body>
@@ -87,6 +95,7 @@
             <input type="text" name="email" placeholder="Email">
             {{!-- <p>Mess Id :</p>
             <input type="text" name="messid" placeholder="Mess Id"> --}}
+            <p><a href="https://forms.gle/qEGxCVdYK6QvwVjGA" target="_blank">Fill Form</a></p>
             <button type="submit">Submit</button>
             
         </form>
